overflow x bug fixed

--- a/frontend/my-app/src/index.css
+++ b/frontend/my-app/src/index.css
@@ -5,6 +5,7 @@ body,html {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
   
 }
 html, body, #root, .app {
